Add possibility to specify environment variables in ProcessExecutor.
git-svn-id: https://svn.sosy-lab.org/software/common/trunk@225 05a39ec8-3e86-40da-8f8d-20173f296dbc